# starkbot-cli

./: .env.example  .gitignore  Cargo.toml  README.md  RELEASES.md  TODO.md  build-release.sh  run.sh
.github/workflows/: release.yml
agents/coding-agent/: agent.md
agents/devops-agent/: agent.md
agents/director/: agent.md
agents/research-agent/: agent.md
agents/starkbot/: agent.md
crates/starkbot-api/: Cargo.toml
crates/starkbot-api/src/: backend.rs  engine.rs  event_bus.rs  events.rs  lib.rs  ron_defs.rs  types.rs
crates/starkbot-app/: Cargo.toml
crates/starkbot-app/src/: main.rs
crates/starkbot-app/tests/: agent_spice_test.rs  dota_flow_spice_test.rs  engine_multiturn_test.rs
crates/starkbot-config/: Cargo.toml
crates/starkbot-config/src/: integrations.rs  keys.rs  lib.rs  manifest.rs  packs.rs  schedules.rs  sessions.rs  settings.rs
crates/starkbot-core/: Cargo.toml
crates/starkbot-core/src/: context.rs  dispatch.rs  lib.rs  persona.rs
crates/starkbot-db/: Cargo.toml
crates/starkbot-db/src/: lib.rs
crates/starkbot-gateway/: Cargo.toml
crates/starkbot-gateway/src/: custom.rs  discord.rs  lib.rs  manager.rs  telegram.rs  types.rs
crates/starkbot-graph/: Cargo.toml
crates/starkbot-graph/src/: lib.rs
crates/starkbot-memory/: Cargo.toml
crates/starkbot-memory/src/: lib.rs
crates/starkbot-skills/: Cargo.toml
crates/starkbot-skills/src/: lib.rs  rag.rs
crates/starkbot-tauri/: Cargo.toml  tauri.conf.json
crates/starkbot-tauri/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
crates/starkbot-tauri/frontend/src/: App.tsx  index.css  types.ts
crates/starkbot-tauri/frontend/src/components/: ApiKeysView.tsx  ChatView.tsx  DataView.tsx  GatewayView.tsx  PacksView.tsx  PersonasView.tsx  SchedulingView.tsx  SettingsView.tsx  SkillTestsView.tsx  SkillsView.tsx
crates/starkbot-tauri/frontend/src/components/flow/: BranchNode.tsx  EntryNode.tsx  FlowEditor.tsx  PromptNode.tsx  ToolBranchNode.tsx
crates/starkbot-tauri/frontend/src/hooks/: useBackend.ts
crates/starkbot-tauri/src/: main.rs
crates/starkbot-tools/: Cargo.toml
crates/starkbot-tools/src/: api_key_read.rs  api_keys_check.rs  approval.rs  bash.rs  edit_file.rs  find_files.rs  grep.rs  guard.rs  install_api_key.rs  install_integration.rs  lib.rs  list_files.rs  load_skill.rs  read_file.rs  skill_test_tools.rs  sub_agent.rs  web_fetch.rs  write_file.rs
crates/starkbot-tui/: Cargo.toml
crates/starkbot-tui/src/: lib.rs  theme.rs
crates/starkbot-tui/src/views/: mod.rs
crates/starkbot-tui/src/widgets/: mod.rs
docs/: current_gaps.md
docs/plan/: 00-overview.md  01-tui-architecture.md  02-metalcraft-integration.md  03-skill-system.md  04-tool-system.md  05-memory-system.md  06-multi-agent.md  07-graf-rs-integration.md  08-testing-with-spice.md  09-config-and-persistence.md  10-project-structure.md
integration_presets/aws/: aws-lambda.md  aws-s3.md  manifest.json
integration_presets/cloudflare/: cloudflare-dns.md  manifest.json
integration_presets/digitalocean/: digitalocean-manage.md  manifest.json
integration_presets/dota/: dota-checkin-flow.json  dota-game.md  manifest.json
integration_presets/dota/custom/: strategy.json
integration_presets/github/: manifest.json
integration_presets/linear/: linear-manage.md  linear-task-worker.json  manifest.json
integration_presets/notion/: manifest.json  notion-manage.md
integration_presets/railway/: manifest.json  railway-manage.md
personas/: coding-agent.json  devops-agent.json  director.json  research-agent.json  starkbot.json
skill_tests/: conversation-quality.ron  linear-integration.ron  safety.ron  tool-selection.ron
skills/: api-keys.md  cloudflare-dns.md  code-review.md  debugging.md  explore-codebase.md  file-operations.md  github.md  integrations-setup.md  planning.md
