[workspace]
members = [
    "crates/starkbot-app",
    "crates/starkbot-tui",
    "crates/starkbot-core",
    "crates/starkbot-tools",
    "crates/starkbot-memory",
    "crates/starkbot-skills",
    "crates/starkbot-db",
    "crates/starkbot-graph",
    "crates/starkbot-config",
    "crates/starkbot-api",
    "crates/starkbot-tauri",
]
resolver = "2"
default-members = ["crates/starkbot-tauri"]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Agentic engine
metalcraft = { version = "0.3.1", features = ["rig"] }
rig = "0.36"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"

# HTTP
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
htmd = "0.1"

# Platform
dirs = "6"

# Testing
spice-framework = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
