[package]
name = "starkbot-api"
version = "0.1.10"
edition = "2021"

[dependencies]
starkbot-core = { path = "../starkbot-core" }
starkbot-tools = { path = "../starkbot-tools" }
starkbot-skills = { path = "../starkbot-skills" }
starkbot-memory = { path = "../starkbot-memory" }
starkbot-db = { path = "../starkbot-db" }
starkbot-config = { path = "../starkbot-config" }
starkbot-graph = { path = "../starkbot-graph", default-features = false }
metalcraft = { workspace = true }
rig = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
