[package]
name = "starkbot-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "starkbot"
path = "src/main.rs"

[dependencies]
starkbot-api = { path = "../starkbot-api" }
starkbot-tui = { path = "../starkbot-tui" }
starkbot-core = { path = "../starkbot-core" }
starkbot-tools = { path = "../starkbot-tools" }
starkbot-config = { path = "../starkbot-config" }
metalcraft = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }

[dev-dependencies]
spice-framework = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
rig = { workspace = true }
