[package]
name = "starkbot-config"
version = "0.1.9"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
zip = "2"

[dev-dependencies]
mockito = "1"
tempfile = "3"
