[package]
name = "starkbot-gateway"
version = "0.1.11"
edition = "2021"

[dependencies]
starkbot-db = { path = "../starkbot-db" }
starkbot-config = { path = "../starkbot-config" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
axum = "0.8"
