[package]
name = "starkbot-memory"
version = "0.1.11"
edition = "2021"

[dependencies]
starkbot-db = { path = "../starkbot-db" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
