[package]
name = "starkbot-tauri"
version = "0.1.2"
edition = "2021"

[[bin]]
name = "starkbot-gui"
path = "src/main.rs"

[dependencies]
starkbot-api = { path = "../starkbot-api" }
tauri = { version = "2", features = ["devtools"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dotenvy = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
open = "5.3.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
