[package]
name = "starkbot-tools"
version = "0.1.7"
edition = "2021"

[dependencies]
metalcraft = { workspace = true }
rig = { workspace = true }
starkbot-skills = { path = "../starkbot-skills" }
starkbot-memory = { path = "../starkbot-memory" }
starkbot-db = { path = "../starkbot-db" }
starkbot-config = { path = "../starkbot-config" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
htmd = { workspace = true }
