[package]
name = "starkbot-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
starkbot-api = { path = "../starkbot-api" }
starkbot-core = { path = "../starkbot-core" }
starkbot-graph = { path = "../starkbot-graph" }
starkbot-skills = { path = "../starkbot-skills" }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
